# Lab01_PART2_4360987

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
constants/: path_strings.py
data_quality/: gx.py
database/: init.sql
frontend/metabase_data/metabase/: metabase.mv.db  metabase.trace.db
gx_docs/gx/: great_expectations.yml
gx_docs/gx/checkpoints/: co2_checkpoint.json
gx_docs/gx/expectations/: .ge_store_backend_id  co2_quality_test.json
gx_docs/gx/validation_definitions/: co2_validations.json
src/: extraction.py  load.py  transformation.py
